added the Booking resource for interacting with bookings on the API. Also removed some bloat that was added while debugging sending arrays over multipart/form-data requests

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,12 @@
 {
   "resources": {
+    "Booking": {
+      "client": "Booking",
+      "namespace": "Visacheck\\Visacheck\\Resources\\Services",
+      "path": "bookings",
+      "includes": ["address", "batch", "inspection", "provider", "vehicle"],
+      "headers": ["Authorization"]
+    },
     "Check": {
       "client": "Check",
       "namespace": "Visacheck\\Visacheck\\Resources\\Checks",
